// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Unordered list Default renders correctly 1`] = `
<ul
  class="ecl-unordered-list"
>
  <li
    class="ecl-unordered-list__item"
  >
    Jobs, growth and investment  
    <ul
      class="ecl-unordered-list"
    >
      <li
        class="ecl-unordered-list__item"
      >
        Investment Plan for Europe: the Juncker Plan          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        European Semester          
      </li>
    </ul>
  </li>
  <li
    class="ecl-unordered-list__item"
  >
    Digital single market          
  </li>
  <li
    class="ecl-unordered-list__item"
  >
    Energy union and climate  
    <ul
      class="ecl-unordered-list"
    >
      <li
        class="ecl-unordered-list__item"
      >
        Security, solidarity and trust          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        A fully-integrated internal energy market          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        Energy efficiency          
      </li>
    </ul>
  </li>
</ul>
`;

exports[`EC - Unordered list Default renders correctly with extra attributes 1`] = `
<ul
  class="ecl-unordered-list"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <li
    class="ecl-unordered-list__item"
  >
    Jobs, growth and investment  
    <ul
      class="ecl-unordered-list"
    >
      <li
        class="ecl-unordered-list__item"
      >
        Investment Plan for Europe: the Juncker Plan          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        European Semester          
      </li>
    </ul>
  </li>
  <li
    class="ecl-unordered-list__item"
  >
    Digital single market          
  </li>
  <li
    class="ecl-unordered-list__item"
  >
    Energy union and climate  
    <ul
      class="ecl-unordered-list"
    >
      <li
        class="ecl-unordered-list__item"
      >
        Security, solidarity and trust          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        A fully-integrated internal energy market          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        Energy efficiency          
      </li>
    </ul>
  </li>
</ul>
`;

exports[`EC - Unordered list Default renders correctly with extra class names 1`] = `
<ul
  class="ecl-unordered-list custom-class custom-class--test"
>
  <li
    class="ecl-unordered-list__item"
  >
    Jobs, growth and investment  
    <ul
      class="ecl-unordered-list"
    >
      <li
        class="ecl-unordered-list__item"
      >
        Investment Plan for Europe: the Juncker Plan          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        European Semester          
      </li>
    </ul>
  </li>
  <li
    class="ecl-unordered-list__item"
  >
    Digital single market          
  </li>
  <li
    class="ecl-unordered-list__item"
  >
    Energy union and climate  
    <ul
      class="ecl-unordered-list"
    >
      <li
        class="ecl-unordered-list__item"
      >
        Security, solidarity and trust          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        A fully-integrated internal energy market          
      </li>
      <li
        class="ecl-unordered-list__item"
      >
        Energy efficiency          
      </li>
    </ul>
  </li>
</ul>
`;
